# arch-install

./: README.md  install.sh  pyproject.toml
archived_shell/: README.md
archived_shell/steps/: 03_btrfs.sh  04_base_install.sh  05_system_config.sh  06_bootloader.sh  07_uefi_entry.sh  08_snapshot_boot_entries.sh  10_snapper_limine_hook.sh
examples/: credentials.json  profile.json
legion_installer/: __init__.py  app.py  cli.py  commands.py  context.py  defaults.py  exceptions.py  models.py  runtime.py  templates.py  ui.py
legion_installer/steps/: __init__.py  base.py  base_install.py  bootloader.py  btrfs.py  disk.py  luks.py  snapper_hook.py  snapper_setup.py  snapshot_entries.py  system_config.py  uefi_entry.py
steps/: 01_disk.sh  01_network.sh  02_luks.sh  03_btrfs.sh  04_base_install.sh  05_system_config.sh  06_bootloader.sh  07_uefi_entry.sh  08_snapshot_boot_entries.sh  09_snapper_setup.sh  10_snapper_limine_hook.sh
