[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legion-arch-installer"
version = "0.1.0"
description = "Opinionated Arch Linux installer for Lenovo Legion i7 Pro Gen 10"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "George Balabanov"},
]
dependencies = []

[project.scripts]
legion-installer = "legion_installer.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["legion_installer*"]
